--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.scss
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.scss
@@ -1,12 +1,17 @@
 @use "variables" as *;
 
 :host {
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: fit-content;
     margin-bottom: 0;
+    gap: $spacing-1;
+
+    label {
+        margin: 0;
+    }
 
     small {
-        margin-top: $spacing-1;
-        display: block;
+        margin: 0;
     }
 }
