--- a/core-web/libs/dotcms-scss/angular/_forms.scss
+++ b/core-web/libs/dotcms-scss/angular/_forms.scss
@@ -59,7 +59,7 @@
     color: $color-palette-gray-700;
     display: block;
     font-size: $font-size-sm;
-    margin-top: 0.25rem;
+    margin-top: $spacing-0;
     word-break: break-word;
 }
 
