--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -77,6 +77,7 @@
         *ngIf="es.showPalette"
         [languageId]="es.editor.viewAs.language.id"
         [containers]="es.editor.containers"
+        [variantId]="es.editorData.variantId"
         data-testId="palette" />
 
     @if(es.editorData.canEditVariant && (es.editorData.mode === editorMode.EDIT ||
