--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -17,16 +17,19 @@
                 styleClass="p-button-text p-button-sm"
                 data-testId="ema-preview" />
 
-            @if(es.editorData.mode === editorMode.EDIT || es.editorData.mode ===
-            editorMode.EDIT_VARIANT) {
-            <p-button
-                *ngIf="es.editor.urlContentMap as urlContentMap"
-                [label]="'editpage.toolbar.edit.url.map.content' | dm : [urlContentMap.contentType]"
-                (onClick)="editUrlContentMap.emit(urlContentMap)"
-                icon="pi pi-pencil"
-                styleClass="p-button-text p-button-sm"
-                data-testId="edit-url-content-map" />
-
+            @if (
+                es.editorData.mode === editorMode.EDIT ||
+                es.editorData.mode === editorMode.EDIT_VARIANT
+            ) {
+                <p-button
+                    *ngIf="es.editor.urlContentMap as urlContentMap"
+                    [label]="
+                        'editpage.toolbar.edit.url.map.content' | dm: [urlContentMap.contentType]
+                    "
+                    (onClick)="editUrlContentMap.emit(urlContentMap)"
+                    icon="pi pi-pencil"
+                    styleClass="p-button-text p-button-sm"
+                    data-testId="edit-url-content-map" />
             }
 
             <dot-ema-bookmarks [url]="es.favoritePageURL" />
@@ -69,13 +72,13 @@
                 [inode]="es.editor.page.inode"
                 (newPage)="handleNewPage($event)" />
 
-            @if(es.editorData.page.isLocked && es.editorData.page.canLock) {
-            <p-button
-                [label]="'Unlock' | dm"
-                [loading]="es.state === editorState.LOADING"
-                (click)="unlockPage(es.editor.page.inode)"
-                styleClass="p-button-sm"
-                data-testId="unlock-button"></p-button>
+            @if (es.editorData.page.isLocked && es.editorData.page.canLock) {
+                <p-button
+                    [label]="'Unlock' | dm"
+                    [loading]="es.state === editorState.LOADING"
+                    (click)="unlockPage(es.editor.page.inode)"
+                    styleClass="p-button-sm"
+                    data-testId="unlock-button"></p-button>
             }
         </div>
     </p-toolbar>
