--- a/core-web/libs/sdk/angular/src/lib/layout/container/container.component.html
+++ b/core-web/libs/sdk/angular/src/lib/layout/container/container.component.html
@@ -1,17 +1,25 @@
-@if ($isInsideEditor()) { @if($contentlets().length){ @for (contentlet of $contentlets(); track
-$index) {
-
-<dotcms-contentlet-wrapper [contentlet]="contentlet" [container]="$dotContainerAsString()">
-    <ng-container
-        *ngComponentOutlet="
-            (componentsMap[contentlet.contentType] | async) || NoComponent;
-            inputs: { contentlet }
-        " />
-</dotcms-contentlet-wrapper>
-} } @else { This container is empty. } } @else { @for (contentlet of $contentlets(); track $index) {
-<ng-container
-    *ngComponentOutlet="
-        (componentsMap[contentlet.contentType] | async) || NoComponent;
-        inputs: { contentlet }
-    " />
-} }
+@if ($isInsideEditor()) {
+    @if ($contentlets().length) {
+        @for (contentlet of $contentlets(); track $index) {
+            <dotcms-contentlet-wrapper
+                [contentlet]="contentlet"
+                [container]="$dotContainerAsString()">
+                <ng-container
+                    *ngComponentOutlet="
+                        (componentsMap[contentlet.contentType] | async) || NoComponent;
+                        inputs: { contentlet }
+                    " />
+            </dotcms-contentlet-wrapper>
+        }
+    } @else {
+        This container is empty.
+    }
+} @else {
+    @for (contentlet of $contentlets(); track $index) {
+        <ng-container
+            *ngComponentOutlet="
+                (componentsMap[contentlet.contentType] | async) || NoComponent;
+                inputs: { contentlet }
+            " />
+    }
+}
