chore(sdk): Added logic to render EmptyComponent in both SDK (#28756)
### Proposed Changes
* Added Custom EmptyComponent
* Now the EmptyComponent is rendered 

Angular SDK


https://github.com/dotCMS/core/assets/144152756/ccd4c690-b8e8-4fa8-94ae-1c0569db0ecd

React SDK


https://github.com/dotCMS/core/assets/144152756/003701ed-7a40-4275-b9bf-fabaee9f6ccf

---------

Co-authored-by: KevinDavilaDotCMS <kfariid@gmail.com>

--- a/core-web/libs/sdk/angular/src/lib/layout/container/container.component.html
+++ b/core-web/libs/sdk/angular/src/lib/layout/container/container.component.html
@@ -4,14 +4,12 @@ $index) {
 <dotcms-contentlet-wrapper [contentlet]="contentlet" [container]="$dotContainerAsString()">
     <ng-container
         *ngComponentOutlet="
-            (componentsMap[contentlet.contentType] | async) || NoComponent;
+            (componentsMap[contentlet.contentType] || componentsMap['CustomNoComponent'] | async) ||
+                NoComponent;
             inputs: { contentlet }
         " />
 </dotcms-contentlet-wrapper>
 } } @else { This container is empty. } } @else { @for (contentlet of $contentlets(); track $index) {
 <ng-container
-    *ngComponentOutlet="
-        (componentsMap[contentlet.contentType] | async) || NoComponent;
-        inputs: { contentlet }
-    " />
+    *ngComponentOutlet="componentsMap[contentlet.contentType] | async; inputs: { contentlet }" />
 } }
