chore(edit-content): add loading in nodes #28645

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -8,4 +8,11 @@
     <ng-template let-node pTemplate="default">
         <span>{{ node.label | truncatePath }}</span>
     </ng-template>
+    <ng-template pTemplate="triggericon">
+        @if (sitesStatus() === 'loading') {
+            <i class="pi pi-spin pi-spinner"></i>
+        } @else {
+            <i class="pi pi-chevron-down"></i>
+        }
+    </ng-template>
 </p-treeSelect>
