--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-edit-content-category-field-sidebar/dot-edit-content-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-edit-content-category-field-sidebar/dot-edit-content-category-field-sidebar.component.scss
@@ -1,10 +1,11 @@
 @use "variables" as *;
 
 .category-field__header {
+    height: 60px;
     align-items: center;
     flex-wrap: wrap;
     gap: $spacing-0;
-    padding: $spacing-1 $spacing-4;
+    padding: 0 $spacing-4;
 }
 
 .category-field__header-title {
@@ -33,6 +34,7 @@
     border: $field-border-size solid $color-palette-gray-400;
     border-radius: $border-radius-md;
     background-color: $white;
+
     padding: $spacing-3;
 }
 
