--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -2,13 +2,13 @@
     (onNodeSelect)="onNodeSelect($event)"
     (onNodeExpand)="onNodeExpand($event)"
     [formControl]="pathControl"
-    [options]="options()"
+    [options]="$options()"
     [attr.aria-labelledby]="'field-' + field.variable"
     selectionMode="single">
     <ng-template let-node pTemplate="default">
         <span>{{ node.label | truncatePath }}</span>
     </ng-template>
     <ng-template pTemplate="triggericon">
-        <i [ngClass]="iconClasses()" class="pi"></i>
+        <i [ngClass]="$iconClasses()" class="pi"></i>
     </ng-template>
 </p-treeSelect>
