feat(edit-content) fix comments #28764

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-edit-content-category-field-sidebar/dot-edit-content-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-edit-content-category-field-sidebar/dot-edit-content-category-field-sidebar.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: $spacing-0;
-    padding: 0 $spacing-4;
+    padding: $spacing-2 $spacing-4;
 }
 
 .category-field__header-title {
