--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -2,8 +2,18 @@
     (onNodeSelect)="onNodeSelect($event)"
     (onNodeExpand)="onNodeExpand($event)"
     [formControl]="pathControl"
+    [filter]="true"
     [options]="$options()"
     [attr.aria-labelledby]="'field-' + field.variable"
+    [virtualScroll]="true"
+    [virtualScrollItemSize]="50"
+    [virtualScrollOptions]="{
+        autoSize: true,
+        style: {
+            width: '100%',
+            height: '500px'
+        }
+    }"
     selectionMode="single">
     <ng-template let-node pTemplate="default">
         <span>{{ node.label | truncatePath }}</span>
