feat(edit-content) change from dialog to sidebar #28764 (#28824)
### Proposed Changes
* Convert from dialog to sidebar the selection of categories in edit
contentlet category-field

### Checklist
- [x] Tests
- [x] Translations
- [ ] Security Implications Contemplated (add notes if applicable)

### Additional Info
** any additional useful context or info **


https://github.com/dotCMS/core/assets/1909643/5e9db5a3-8bb3-4b89-a105-31091d8cd191

---------

Co-authored-by: Freddy Montes <751424+fmontes@users.noreply.github.com>

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,21 +1,24 @@
 @if (values.length) {
-    <div class="dot-category-field__categories" data-testId="category-chip-list">
-        @for (category of values; track category.id) {
-            <p-chip
-                [pTooltip]="category.value"
-                [removable]="true"
-                [label]="category.value"
-                tooltipPosition="top"
-                styleClass="p-chip-sm" />
-        }
-    </div>
+<div class="dot-category-field__categories" data-testId="category-chip-list">
+    @for (category of values; track category.id) {
+    <p-chip
+        [pTooltip]="category.value"
+        [removable]="true"
+        [label]="category.value"
+        tooltipPosition="top"
+        styleClass="p-chip-sm" />
+    }
+</div>
 }
 
 <div class="dot-category-field__select">
-    <p-button
-        (onClick)="showCategories()"
-        [label]="'edit.content.category-field.show-categories-dialog' | dm"
-        data-testId="show-dialog-btn"
-        icon="pi pi-pencil"
-        styleClass="p-button-sm p-button-text p-button-secondary" />
+    <button
+        (click)="showCategoriesSidebar()"
+        [disabled]="disableSelectCategoriesButton()"
+        [label]="'edit.content.category-field.button.show-categories' | dm"
+        class="p-button-sm p-button-text p-button-secondary"
+        data-testId="show-sidebar-btn"
+        pButton></button>
 </div>
+
+<ng-container dotDynamic></ng-container>
