--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.scss
@@ -15,6 +15,7 @@
         .p-field-hint {
             markdown pre {
                 background-color: $color-palette-secondary-100;
+                padding: $spacing-0 $spacing-1;
 
                 // This padding prevents the code to overlap between lines
                 code {
