--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/componentes/treeselect.component.css
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/componentes/treeselect.component.css
@@ -53,7 +53,7 @@
     flex: 1 1 auto;
 }
 
-.p-treeselect-filter-icon {
+.p-treeselect-filter-container .p-treeselect-filter-icon {
     position: absolute;
     top: 50%;
     margin-top: -0.5rem;
