--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -1,9 +1,9 @@
 <p-treeSelect
     (onNodeSelect)="onNodeSelect($event)"
-    (onNodeExpand)="onNodeExpand($event)"
+    (onNodeExpand)="store.loadChildren($event)"
     [formControl]="pathControl"
     [filter]="true"
-    [options]="$options()"
+    [options]="store.tree()"
     [attr.aria-labelledby]="'field-' + field.variable"
     [virtualScroll]="true"
     [virtualScrollItemSize]="50"
@@ -14,11 +14,13 @@
             height: '500px'
         }
     }"
+    filterBy="label"
+    filterMode="strict"
     selectionMode="single">
     <ng-template let-node pTemplate="default">
         <span>{{ node.label | truncatePath }}</span>
     </ng-template>
     <ng-template pTemplate="triggericon">
-        <i [ngClass]="$iconClasses()" class="pi"></i>
+        <i [ngClass]="store.iconClasses()" class="pi"></i>
     </ng-template>
 </p-treeSelect>
