fix(UVE): Show  for enterprise only

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -64,6 +64,7 @@
                 (addContent)="dialog.addContentlet($event)"
                 [hide]="es.state === editorState.DRAGGING"
                 [contentletArea]="es.contentletArea"
+                [isEnterprise]="es.isEnterpriseLicense"
                 data-testId="contentlet-tools" />
             <dot-ema-page-dropzone
                 *ngIf="es.showDropzone"
@@ -80,22 +81,20 @@
         [variantId]="es.editorData.variantId"
         data-testId="palette" />
 
-    @if (
-        es.editorData.canEditVariant &&
-        (es.editorData.mode === editorMode.EDIT || es.editorData.mode === editorMode.EDIT_VARIANT)
-    ) {
-        <dot-edit-ema-dialog
-            (action)="onCustomEvent($event)"
-            (reloadFromDialog)="reloadFromDialog()"
-            #dialog
-            data-testId="ema-dialog"></dot-edit-ema-dialog>
-        <p-confirmDialog
-            [style]="{
-                width: '400px'
-            }"
-            rejectIcon="hidden"
-            acceptIcon="hidden"
-            rejectButtonStyleClass="p-button-outlined"
-            data-testId="confirm-dialog"></p-confirmDialog>
+    @if ( es.editorData.canEditVariant && (es.editorData.mode === editorMode.EDIT ||
+    es.editorData.mode === editorMode.EDIT_VARIANT) ) {
+    <dot-edit-ema-dialog
+        (action)="onCustomEvent($event)"
+        (reloadFromDialog)="reloadFromDialog()"
+        #dialog
+        data-testId="ema-dialog"></dot-edit-ema-dialog>
+    <p-confirmDialog
+        [style]="{
+            width: '400px'
+        }"
+        rejectIcon="hidden"
+        acceptIcon="hidden"
+        rejectButtonStyleClass="p-button-outlined"
+        data-testId="confirm-dialog"></p-confirmDialog>
     }
 </ng-container>
