--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
@@ -9,16 +9,16 @@
     [ngStyle]="styles.bottomButton"
     data-testId="add-bottom-button"
     icon="pi pi-plus"></p-button>
-<p-menu [model]="items" [popup]="true" #menu appendTo="body" data-testId="menu-add"></p-menu>
+<p-menu [model]="items()" [popup]="true" #menu appendTo="body" data-testId="menu-add"></p-menu>
 
 <div *ngIf="!isContainerEmpty" [ngStyle]="styles.actions" class="actions" data-testId="actions">
     @if (contentletArea.payload.vtlFiles?.length) {
-        <p-menu [model]="vtlFiles" [popup]="true" #menuVTL appendTo="body" />
-        <p-button
-            (click)="menuVTL.toggle($event)"
-            data-testId="edit-vtl-button"
-            styleClass="p-button-rounded p-button-raised"
-            icon="pi pi-code" />
+    <p-menu [model]="vtlFiles" [popup]="true" #menuVTL appendTo="body" />
+    <p-button
+        (click)="menuVTL.toggle($event)"
+        data-testId="edit-vtl-button"
+        styleClass="p-button-rounded p-button-raised"
+        icon="pi pi-code" />
     }
 
     <p-button
