--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -7,11 +7,12 @@
     [attr.aria-labelledby]="'field-' + field.variable"
     [virtualScroll]="true"
     [virtualScrollItemSize]="50"
+    [scrollHeight]="'500px'"
     [virtualScrollOptions]="{
         autoSize: true,
         style: {
             width: '100%',
-            height: '400px'
+            height: '500px'
         }
     }"
     filterBy="label"
