Fix bug with scroll (#28905)
### Proposed Changes
* Add scrollHeight input to fix error and match with VirtualScroll
Height

### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)


### Videos

Original       


https://github.com/dotCMS/core/assets/7611944/ac4dbedc-ea09-427b-b090-002fd70654ad

Updated


https://github.com/dotCMS/core/assets/7611944/ff14c0d0-34ba-4fa3-8c29-a1cab5dbd03c

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -7,11 +7,12 @@
     [attr.aria-labelledby]="'field-' + field.variable"
     [virtualScroll]="true"
     [virtualScrollItemSize]="50"
+    [scrollHeight]="'450px'"
     [virtualScrollOptions]="{
         autoSize: true,
         style: {
             width: '100%',
-            height: '500px'
+            height: '450px'
         }
     }"
     filterBy="label"
