edit-content: change filter mode

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -16,7 +16,7 @@
         }
     }"
     filterBy="label"
-    filterMode="strict"
+    filterMode="lenient"
     selectionMode="single">
     <ng-template let-node pTemplate="default">
         <span>{{ node.label | truncatePath }}</span>
