chore(edit-content): fix error with node select on init state

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -1,5 +1,5 @@
 <p-treeSelect
-    (onNodeSelect)="onNodeSelect($event)"
+    (onNodeSelect)="store.chooseNode($event)"
     (onNodeExpand)="store.loadChildren($event)"
     [formControl]="pathControl"
     [filter]="true"
