feat(edit-content) fix test, added new test #28831

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,14 +1,14 @@
 @if (store.selectedCategories().length) {
-    <div class="dot-category-field__categories" data-testId="category-chip-list">
-        @for (category of store.categoriesValue(); track category.key) {
-            <p-chip
-                [pTooltip]="category.value"
-                [removable]="true"
-                [label]="category.value"
-                tooltipPosition="top"
-                styleClass="p-chip-sm" />
-        }
-    </div>
+<div class="dot-category-field__categories" data-testId="category-chip-list">
+    @for (category of store.categoriesValue(); track category.key) {
+    <p-chip
+        [pTooltip]="category.value"
+        [removable]="true"
+        [label]="category.value"
+        tooltipPosition="top"
+        styleClass="p-chip-sm" />
+    }
+</div>
 }
 
 <div class="dot-category-field__select">
@@ -20,5 +20,4 @@
         data-testId="show-sidebar-btn"
         pButton></button>
 </div>
-
-<ng-container dotDynamic></ng-container>
+<ng-container data-testId="sidebar-placeholder" dotDynamic></ng-container>
