chore(ui): fix error in uni tests

--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
@@ -79,6 +79,7 @@
                             rows="11">
                         </textarea>
                         <dot-copy-button
+                            data-testid="copy-to-clipboard"
                             [copy]="aiProcessedPrompt"
                             customClass="p-button-rounded" />
                     </div>
